--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,9 +1,14 @@
-image: ubuntu  # Use an image that suits your project's requirements
+image: node:14  # Use an image that suits your project's requirements
+
 pipelines:
   default:
     - step:
         name: Copy App to EC2
         script:
           - apt-get update && apt-get install -y openssh-client  # Install SSH client
-          - scp -r ./app 54.87.60.6:/home/ubuntu/  # Replace with your actual path
+          - scp -r ./app ubuntu@54.87.60.6:/home/ubuntu  # Replace with your actual path
 
+definitions:
+  services:
+    docker:
+      memory: 2048
