--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y openssh-client
-          scp -r ./app ubuntu@54.87.60.6:/home/ubuntu  # Replace with your actual path
+          scp -o StrictHostKeyChecking=no -r ./app ubuntu@54.87.60.6:/home/ubuntu
 
