--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -18,5 +18,5 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y openssh-client
           ls
-          sudo scp -o StrictHostKeyChecking=no -r ./app ubuntu@54.87.60.6:/home/ubuntu
+          scp -r ./app ubuntu@54.87.60.6:/home/ubuntu
 
